--- a/styles/modules/projects.module.scss
+++ b/styles/modules/projects.module.scss
@@ -101,6 +101,21 @@
 		text-transform: lowercase;
 	}
 
+	.links {
+		display: flex;
+		flex-direction: row;
+		gap: 0.4rem;
+	}
+
+	.link {
+		font-size: 0.6rem;
+		text-transform: lowercase;
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+
 	.imgContainer {
 		width: 100%;
 		height: 70%;
@@ -118,8 +133,6 @@
 
 		margin-bottom: 0.5rem;
 		height: 20rem;
-
-
 
 		.tools {
 			display: none;
