--- a/src/EducationItem.css
+++ b/src/EducationItem.css
@@ -29,6 +29,7 @@
 	display: flex;
 	justify-content: space-between;
 	color: #666;
+
 	* {
 		font-size: 0.85rem;
 	}
@@ -56,7 +57,7 @@
 }
 
 .education-description.expanded {
-	max-height: 500px; /* Adjust this based on the content height */
+	max-height: 500px;
 	padding: 1rem;
 }
 
